@@ -1,28 +1,32 @@
 --- #YAML:1.0
 name:               Image-OCR-Tesseract
-version:            1.22
-abstract:           ~
-author:  []
+version:            1.24
+abstract:           read an image with tesseract ocr and get output
+author:
+    - Leo Charre leocharre at cpan dot org
 license:            perl
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Carp:              1
-    Cwd:               3
-    Exporter:          5
-    File::Copy:        2.09
-    File::Find::Rule:  0.30
-    File::Path:        2.07
-    File::Spec:        3.29
-    File::Which:       0.05
-    LEOCHARRE::CLI:    1.19
-    Test::Simple:      0
+    Carp:                1
+    Cwd:                 3
+    Exporter:            5
+    File::Copy:          2.09
+    File::Find::Rule:    0.30
+    File::Path:          2.07
+    File::Spec:          3.29
+    File::Which:         0.05
+    LEOCHARRE::CLI:      1.19
+    String::ShellQuote:  0
+    Test::Simple:        0
 no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
