@@ -1,18 +1,20 @@
 use lib inc; #__assertexe__#
-use Devel::AssertEXE qw(tesseract convert); #__assertexe__#
 use Devel::AssertOS qw(Unix Linux);
+use Devel::AssertEXE qw(tesseract convert); #__assertexe__#
 
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
    NAME => 'Image::OCR::Tesseract',
-   VERSION_FROM => 'lib/Image/OCR/Tesseract.pm',
-   
+   VERSION_FROM  => 'lib/Image/OCR/Tesseract.pm',
+   ABSTRACT_FROM => 'lib/Image/OCR/Tesseract.pod',
+   AUTHOR => 'Leo Charre leocharre at cpan dot org',
 
    # gen /usr/bin/pmused by Fri Jun 26 10:10:31 EDT 2009 
    PREREQ_PM => {
       'Carp'                              => '1',
       'Cwd'                               => '3',
+      'String::ShellQuote'          => 0,
       'Exporter'                          => '5',
       'File::Copy'                        => '2.09',
       'File::Find::Rule'                  => '0.30',
