@@ -1,3 +1,13 @@
+2010-02-04 21:36  cvs
+
+	* Makefile.PL, README, t/02_Image_OCR_Tesseract.t: tests are better
+	  at detecting missing deps cleaned up testing output- not as
+	  annoying to install- less to look through in case of any errors
+
+2010-02-04 19:31  cvs
+
+	* INSTALL.tesseract: Updated install help for tesseract dependency.
+
 2009-07-18 22:21  cvs
 
 	* INSTALL, t/00_dep.t, t/02_Image_OCR_Tesseract.t: Updated tests so
